installdir = $(LIBDIR)/enigma2/python/Plugins/SystemPlugins/CrossEPG

install_PYTHON =	\
	crossepg_auto.pyc \
	crossepg_converter.pyc \
	crossepg_downloader.pyc \
	crossepg_exec.pyc \
	crossepg_extra.pyc \
	crossepg_importer.pyc \
	crossepg_info.pyc \
	crossepglib.pyc \
	crossepg_loader.pyc \
	crossepg_locale.pyc \
	crossepg_main.pyc \
	crossepg_setup.pyc \
	__init__.pyc \
	plugin.pyc
 
